<resources>
    <string name="app_name">Aplikasi Konsultasi Dokter</string>
    <string name="doctor_name">Nama Dokter</string>
    <string name="specialist">Spesialis</string>
    <string name="last_chat">Chat Terakhir</string>
    <string name="welcome">Selamat Datang</string>
    <string name="text1">Konsultasikan masalahmu dengan dokter yang berpengalaman, jadikan hidupmu lebih berkualitas.</string>
    <string name="text2">Belum mempunyai email?</string>
    <string name="hint_login">Masukkan Email/Nomor Telepon</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="submit">Login</string>
    <string name="btn_register"><u>Registrasi Disini</u></string>
    <string name="register">Registrasi</string>
    <string name="register_now">Registrasi Sekarang</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="provinsi">Provinsi</string>
    <string name="alamat1">Desa/Kelurahan/Nama Jalan</string>
    <string name="alamat2">Kecamatan</string>
    <string name="alamat3">Kabupaten/Kota</string>
    <string name="password">Password</string>
    <string name="confirm">Masukkan Password Kembali</string>
    <string name="nomor_hp">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="koma">, </string>
    <string name="nama_saya">Nama Saya</string>
    <string name="provinsi_saya">Provinsi Saya</string>
    <string name="kabupaten_kota_saya">Kabupaten/Kota Saya</string>
    <string name="nomor_saya">Nomor Telepon Saya</string>
    <string name="jenis_kelamin_saya">Jenis Kelamin Saya</string>
    <string name="email_saya">Email Saya</string>
    <string name="tempat_praktik">Tempat Praktik</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="spesialis_dokter">Spesialis Dokter</string>
    <string name="tempat_praktik_dokter">Tempat Praktik Dokter</string>
    <string name="alamat_dokter">Alamat Tempat Bekerja</string>
    <string name="kabupaten_dokter">Kabupaten/Kota Dokter</string>
    <string name="provinsi_dokter">Provinsi Dokter</string>
    <string name="nomor_dokter">Nomor Telepon Dokter</string>
    <string name="maps">Link Google Maps</string>
    <string name="jenis_kelamin_dokter">Jenis Kelamin Dokter</string>
    <string name="keterangan">Keterangan</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="chat_right">Halo Dokter</string>
    <string name="chat_left">Halo Pasien</string>
    <string name="list_dokter">Daftar Dokter</string>
    <string name="chat_room">Chat</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="chat_sekarang">Chat Dokter Sekarang</string>
    <string name="logo">Logo</string>
    <string name="lupa_password">Lupa Password Anda?</string>
    <string name="title">Lupa Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="btn_pass_baru">Submit</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="daftar_dokter">Daftar Dokter</string>
    <string name="chat">Chat</string>
    <string name="dokter">Dokter</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
</resources>