<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/register_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_register"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/register_jenis_kelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jenis_kelamin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_nama"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/register_provinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/provinsi"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_jenis_kelamin"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/register_alamat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_provinsi"
        android:autofillHints=""
        android:inputType=""/>

    <EditText
        android:id="@+id/register_alamat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_alamat1"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/register_alamat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_alamat2"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/register_nomor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomor_hp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_alamat3"
        android:autofillHints=""
        android:inputType="number" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_nomor"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        android:autofillHints=""
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm"/>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>