<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.fragment.MyProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_photo_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_photo_profile">

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nama_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/nama"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_jenis_kelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama">

        <TextView
            android:id="@+id/jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/jenis_kelamin_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/jenis_kelamin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_jenis_kelamin">

        <TextView
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alamat_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/alamat">

            <TextView
                android:id="@+id/alamat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat1"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/koma1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koma"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/alamat1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/alamat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat2"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/koma1"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_kabupaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_alamat">

        <TextView
            android:id="@+id/kabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat3"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/kabupaten_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kabupaten_kota_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/kabupaten"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_provinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_kabupaten">

        <TextView
            android:id="@+id/provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/provinsi_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provinsi_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/provinsi"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_provinsi">

        <TextView
            android:id="@+id/no_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_hp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nomor_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/no_telp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_telepon">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/email_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_saya"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>