<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.activity.DoctorDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_photo_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nama_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/doctor_photo_profile">

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nama_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/nama"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_spesialis_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama_dokter">

        <TextView
            android:id="@+id/spesialis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialist"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/spesialis_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spesialis_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/spesialis"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_kelamin_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_spesialis_dokter">

        <TextView
            android:id="@+id/jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/jenis_kelamin_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/jenis_kelamin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_praktik_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_kelamin_dokter">

        <TextView
            android:id="@+id/tempat_praktik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempat_praktik"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tempat_praktik_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempat_praktik_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tempat_praktik"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alamat_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_praktik_dokter">

        <TextView
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/alamat_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/alamat"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_kabupaten_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_alamat_dokter">

        <TextView
            android:id="@+id/kabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat3"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/kabupaten_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kabupaten_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/kabupaten"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_provinsi_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_kabupaten_dokter">

        <TextView
            android:id="@+id/provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/provinsi_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provinsi_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/provinsi"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nomor_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_provinsi_dokter">

        <TextView
            android:id="@+id/nomor_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_hp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nomor_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_dokter"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/nomor_hp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_maps_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nomor_dokter">

        <TextView
            android:id="@+id/maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maps"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/maps_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maps"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/maps"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_keterangan_dokter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_maps_dokter">

        <TextView
            android:id="@+id/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/keterangan_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/keterangan"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_chat_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chat_sekarang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_keterangan_dokter"/>

</androidx.constraintlayout.widget.ConstraintLayout>